general content layout addition

--- a/index.html
+++ b/index.html
@@ -95,7 +95,9 @@
                 <div id="announcements">
                     a
                 </div>
-    
+                <div id="trendheader">
+                    Trending
+                </div>
                 <div id="trending">
                     a
                 </div>
