--- a/index.html
+++ b/index.html
@@ -83,12 +83,54 @@
             </div>
 
             <ul id="projects">
-                <li>A</li>
-                <li>a</li>
-                <li>a</li>
-                <li>a</li>
-                <li>a</li>
-                <li>a</li>
+                <li>
+                    <div class="yellowbar">
+
+                    </div>
+                    <div class="text">
+                      a  
+                    </div>
+                </li>
+                <li>
+                    <div class="yellowbar">
+
+                    </div>
+                    <div class="text">
+                      a  
+                    </div>
+                </li>
+                <li>
+                    <div class="yellowbar">
+
+                    </div>
+                    <div class="text">
+                      a  
+                    </div>
+                </li>
+                <li>
+                    <div class="yellowbar">
+
+                    </div>
+                    <div class="text">
+                      a  
+                    </div>
+                </li>
+                <li>
+                    <div class="yellowbar">
+
+                    </div>
+                    <div class="text">
+                      a  
+                    </div>
+                </li>
+                <li>
+                    <div class="yellowbar">
+
+                    </div>
+                    <div class="text">
+                      a  
+                    </div>
+                </li>
             </ul>
 
             <div id="rightside">
