--- a/index.html
+++ b/index.html
@@ -88,49 +88,85 @@
 
                     </div>
                     <div class="text">
-                      a  
+                      <h3>Hello</h3>
+                      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer interdum lorem sit amet mauris suscipit, in pharetra tellus facilisis. Suspendisse semper rhoncus nibh eget mattis. Nulla pellentesque est diam, at pretium sapien mollis a. Nullam non tellus diam. Mauris sapien diam, pretium tempor nibh non, sollicitudin pretium felis. Nulla mattis lacus purus, nec iaculis arcu sagittis eu. Fusce aliquam mauris consequat nibh semper, et gravida elit vulputate. Suspendisse id luctus lorem. Nullam maximus, mauris nec interdum faucibus, sapien tellus malesuada nibh, et finibus metus arcu vitae ipsum.</p>
                     </div>
+                    <div class="icons">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-star"><polygon points="12 2 15.09 8.26 22 9.27 17 14.14 18.18 21.02 12 17.77 5.82 21.02 7 14.14 2 9.27 8.91 8.26 12 2"></polygon></svg><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-edit"><path d="M11 4H4a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2v-7"></path><path d="M18.5 2.5a2.121 2.121 0 0 1 3 3L12 15l-4 1 1-4 9.5-9.5z"></path></svg><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-share"><path d="M4 12v8a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2v-8"></path><polyline points="16 6 12 2 8 6"></polyline><line x1="12" y1="2" x2="12" y2="15"></line></svg>
+                    </div>
+
                 </li>
+
                 <li>
                     <div class="yellowbar">
 
                     </div>
                     <div class="text">
-                      a  
+                      <h3>Hello</h3>
+                      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer interdum lorem sit amet mauris suscipit, in pharetra tellus facilisis. Suspendisse semper rhoncus nibh eget mattis. Nulla pellentesque est diam, at pretium sapien mollis a. Nullam non tellus diam. Mauris sapien diam, pretium tempor nibh non, sollicitudin pretium felis. Nulla mattis lacus purus, nec iaculis arcu sagittis eu. Fusce aliquam mauris consequat nibh semper, et gravida elit vulputate. Suspendisse id luctus lorem. Nullam maximus, mauris nec interdum faucibus, sapien tellus malesuada nibh, et finibus metus arcu vitae ipsum.</p>
                     </div>
+                    <div class="icons">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-star"><polygon points="12 2 15.09 8.26 22 9.27 17 14.14 18.18 21.02 12 17.77 5.82 21.02 7 14.14 2 9.27 8.91 8.26 12 2"></polygon></svg><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-edit"><path d="M11 4H4a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2v-7"></path><path d="M18.5 2.5a2.121 2.121 0 0 1 3 3L12 15l-4 1 1-4 9.5-9.5z"></path></svg><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-share"><path d="M4 12v8a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2v-8"></path><polyline points="16 6 12 2 8 6"></polyline><line x1="12" y1="2" x2="12" y2="15"></line></svg>
+                    </div>
+
                 </li>
+
                 <li>
                     <div class="yellowbar">
 
                     </div>
                     <div class="text">
-                      a  
+                      <h3>Hello</h3>
+                      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer interdum lorem sit amet mauris suscipit, in pharetra tellus facilisis. Suspendisse semper rhoncus nibh eget mattis. Nulla pellentesque est diam, at pretium sapien mollis a. Nullam non tellus diam. Mauris sapien diam, pretium tempor nibh non, sollicitudin pretium felis. Nulla mattis lacus purus, nec iaculis arcu sagittis eu. Fusce aliquam mauris consequat nibh semper, et gravida elit vulputate. Suspendisse id luctus lorem. Nullam maximus, mauris nec interdum faucibus, sapien tellus malesuada nibh, et finibus metus arcu vitae ipsum.</p>
                     </div>
+                    <div class="icons">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-star"><polygon points="12 2 15.09 8.26 22 9.27 17 14.14 18.18 21.02 12 17.77 5.82 21.02 7 14.14 2 9.27 8.91 8.26 12 2"></polygon></svg><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-edit"><path d="M11 4H4a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2v-7"></path><path d="M18.5 2.5a2.121 2.121 0 0 1 3 3L12 15l-4 1 1-4 9.5-9.5z"></path></svg><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-share"><path d="M4 12v8a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2v-8"></path><polyline points="16 6 12 2 8 6"></polyline><line x1="12" y1="2" x2="12" y2="15"></line></svg>
+                    </div>
+
                 </li>
+
                 <li>
                     <div class="yellowbar">
 
                     </div>
                     <div class="text">
-                      a  
+                      <h3>Hello</h3>
+                      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer interdum lorem sit amet mauris suscipit, in pharetra tellus facilisis. Suspendisse semper rhoncus nibh eget mattis. Nulla pellentesque est diam, at pretium sapien mollis a. Nullam non tellus diam. Mauris sapien diam, pretium tempor nibh non, sollicitudin pretium felis. Nulla mattis lacus purus, nec iaculis arcu sagittis eu. Fusce aliquam mauris consequat nibh semper, et gravida elit vulputate. Suspendisse id luctus lorem. Nullam maximus, mauris nec interdum faucibus, sapien tellus malesuada nibh, et finibus metus arcu vitae ipsum.</p>
                     </div>
+                    <div class="icons">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-star"><polygon points="12 2 15.09 8.26 22 9.27 17 14.14 18.18 21.02 12 17.77 5.82 21.02 7 14.14 2 9.27 8.91 8.26 12 2"></polygon></svg><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-edit"><path d="M11 4H4a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2v-7"></path><path d="M18.5 2.5a2.121 2.121 0 0 1 3 3L12 15l-4 1 1-4 9.5-9.5z"></path></svg><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-share"><path d="M4 12v8a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2v-8"></path><polyline points="16 6 12 2 8 6"></polyline><line x1="12" y1="2" x2="12" y2="15"></line></svg>
+                    </div>
+
                 </li>
+
                 <li>
                     <div class="yellowbar">
 
                     </div>
                     <div class="text">
-                      a  
+                      <h3>Hello</h3>
+                      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer interdum lorem sit amet mauris suscipit, in pharetra tellus facilisis. Suspendisse semper rhoncus nibh eget mattis. Nulla pellentesque est diam, at pretium sapien mollis a. Nullam non tellus diam. Mauris sapien diam, pretium tempor nibh non, sollicitudin pretium felis. Nulla mattis lacus purus, nec iaculis arcu sagittis eu. Fusce aliquam mauris consequat nibh semper, et gravida elit vulputate. Suspendisse id luctus lorem. Nullam maximus, mauris nec interdum faucibus, sapien tellus malesuada nibh, et finibus metus arcu vitae ipsum.</p>
                     </div>
+                    <div class="icons">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-star"><polygon points="12 2 15.09 8.26 22 9.27 17 14.14 18.18 21.02 12 17.77 5.82 21.02 7 14.14 2 9.27 8.91 8.26 12 2"></polygon></svg><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-edit"><path d="M11 4H4a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2v-7"></path><path d="M18.5 2.5a2.121 2.121 0 0 1 3 3L12 15l-4 1 1-4 9.5-9.5z"></path></svg><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-share"><path d="M4 12v8a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2v-8"></path><polyline points="16 6 12 2 8 6"></polyline><line x1="12" y1="2" x2="12" y2="15"></line></svg>
+                    </div>
+
                 </li>
+
                 <li>
                     <div class="yellowbar">
 
                     </div>
                     <div class="text">
-                      a  
+                      <h3>Hello</h3>
+                      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer interdum lorem sit amet mauris suscipit, in pharetra tellus facilisis. Suspendisse semper rhoncus nibh eget mattis. Nulla pellentesque est diam, at pretium sapien mollis a. Nullam non tellus diam. Mauris sapien diam, pretium tempor nibh non, sollicitudin pretium felis. Nulla mattis lacus purus, nec iaculis arcu sagittis eu. Fusce aliquam mauris consequat nibh semper, et gravida elit vulputate. Suspendisse id luctus lorem. Nullam maximus, mauris nec interdum faucibus, sapien tellus malesuada nibh, et finibus metus arcu vitae ipsum.</p>
                     </div>
+                    <div class="icons">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-star"><polygon points="12 2 15.09 8.26 22 9.27 17 14.14 18.18 21.02 12 17.77 5.82 21.02 7 14.14 2 9.27 8.91 8.26 12 2"></polygon></svg><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-edit"><path d="M11 4H4a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2v-7"></path><path d="M18.5 2.5a2.121 2.121 0 0 1 3 3L12 15l-4 1 1-4 9.5-9.5z"></path></svg><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-share"><path d="M4 12v8a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2v-8"></path><polyline points="16 6 12 2 8 6"></polyline><line x1="12" y1="2" x2="12" y2="15"></line></svg>
+                    </div>
+
                 </li>
+                
             </ul>
 
             <div id="rightside">
