layouts of all items done

--- a/index.html
+++ b/index.html
@@ -171,13 +171,34 @@
 
             <div id="rightside">
                 <div id="announcements">
-                    a
+                    <div class="news">
+                        <div>
+                            <h4>Lorem Ipsum</h4>
+                            <p>This is very interesting news and text that is meant to be here</p>
+                        </div>
+                        
+                    </div>
+                    <div class="news">
+                        <div>
+                            <h4>Lorem Ipsum</h4>
+                            <p>This is very interesting news and text that is meant to be here</p>
+                        </div>
+                    </div>
+                    <div class="news">
+                        <div>
+                            <h4>Lorem Ipsum</h4>
+                            <p>This is very interesting news and text that is meant to be here</p>
+                        </div>
+                    </div>
                 </div>
                 <div id="trendheader">
                     Trending
                 </div>
                 <div id="trending">
-                    a
+                    <div class="person">asdf</div>
+                    <div class="person">asdf</div>
+                    <div class="person">asdf</div>
+                    <div class="person">asdf</div>
                 </div>
     
 
